src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ACF_BankName__c</fullName>
        <description>Click Loans</description>
        <label>Current Lender</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountant_Name__c</fullName>
        <label>Accountant Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountant_Phone__c</fullName>
        <label>Accountant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Acf_Are_there_any_more_properties__c</fullName>
        <description>Click Loans</description>
        <label>Are there any more properties?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_campaign__c</fullName>
        <label>Affiliate_campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>After_Tax_Salary__c</fullName>
        <label>After Tax Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Income__c</fullName>
        <label>Annual Income</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applied_Before__c</fullName>
        <label>Applied Before</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Guide_Quote_Privacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credit Guide, Quote &amp; Privacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_History__c</fullName>
        <label>Credit History</label>
        <picklist>
            <picklistValues>
                <fullName>Paid or Unpaid Defaults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discharged from Part 9 or Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Many Credit Enquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Credit History</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Role__c</fullName>
        <label>Current Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNCR_Wash_Date__c</fullName>
        <label>DNCR Wash Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DNCR_Wash_Expiry__c</fullName>
        <label>DNCR Wash Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DNCR_Washing_Transaction_ID__c</fullName>
        <label>DNCR Washing Transaction ID</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discharged_from_Part_9_or_Bankruptcy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discharged from Part 9 or Bankruptcy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drivers_Lic_Exp__c</fullName>
        <label>Drivers Lic Exp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Drivers_Lic_No__c</fullName>
        <label>Drivers Lic No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Address__c</fullName>
        <label>Employer Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <label>Employer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employment_Start_Date__c</fullName>
        <label>Employment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrelink or Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HPI_LE_Dependants__c</fullName>
        <label>HPI LE Dependants</label>
        <picklist>
            <controllingField>Number_of_Children__c</controllingField>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>467</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>909</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1351</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1793</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2235</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HPI_Living_Expenses__c</fullName>
        <formula>IF( TEXT(Marital_Status__c) = &quot;Single&quot; || TEXT(Marital_Status__c) = &quot;Divorced/Separated&quot; || TEXT(Marital_Status__c) = &quot;Widow/Widower&quot;, 1250, 1817)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPI Living Expenses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Housing_Status__c</fullName>
        <label>Housing Status</label>
        <picklist>
            <picklistValues>
                <fullName>Boarding/Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Own Outright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Mortgage_Details__c</fullName>
        <label>Landlord/Mortgage Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Pardot_Form_Handler__c</fullName>
        <label>Last Pardot Form Handler</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Converted_Status__c</fullName>
        <formula>acf_Lead__r.IsConverted</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Converted Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Click Refi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Length_of_Employment_Months__c</fullName>
        <label>Length of Employment (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_of_Residence_Months__c</fullName>
        <label>Length of Residence Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Defacto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Divorced/Separated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Married</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Widow/Widower</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nearest_Relative_Not_Living_With_You__c</fullName>
        <label>Nearest Relative Not Living With You</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nearest_Relitive_Address__c</fullName>
        <label>Nearest Relitive Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nearest_Relitive_Phone__c</fullName>
        <label>Nearest Relitive Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Nearest_Relitive_Relationship__c</fullName>
        <label>Nearest Relitive Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Other_Weekly_Income__c</fullName>
        <label>Net Other Weekly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total_Monthly_Income__c</fullName>
        <formula>Net_Total_Weekly_Income__c * 52 / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Monthly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Total_Weekly_Income__c</fullName>
        <formula>Net_Weekly_Income__c +  Net_Other_Weekly_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Total Weekly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_Weekly_Income__c</fullName>
        <label>Net Weekly Income</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_Credit_History_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Credit History</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Children__c</fullName>
        <label>Number of Children</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Living_Expenses__c</fullName>
        <label>Other Living Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Paid_or_Unpaid_Defaults__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid or Unpaid Defaults</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Annual_Income__c</fullName>
        <label>Partner Annual Income</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Partner_Super_Balance__c</fullName>
        <label>Partner Super Balance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Personal_Reference_Address__c</fullName>
        <label>Personal Reference Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Personal_Reference_Name__c</fullName>
        <label>Personal Reference Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Reference_Phone__c</fullName>
        <label>Personal Reference Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Personal_Reference_Relationship__c</fullName>
        <label>Personal Reference Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Address__c</fullName>
        <label>Previous Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Employer_Name__c</fullName>
        <label>Previous Employer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Employment_Status__c</fullName>
        <label>Previous Employment Status</label>
        <picklist>
            <picklistValues>
                <fullName>Casual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centerlink/Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Employed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Job_Title__c</fullName>
        <label>Previous Job Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Landlord_Mortgage_Details__c</fullName>
        <label>Previous Landlord/Mortgage Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Previous_Length_of_Employment_Months__c</fullName>
        <label>Previous Length of Employment (Months)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Length_of_Residence_Months__c</fullName>
        <label>Previous Length of Residence Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previous_Net_Weekly_Income__c</fullName>
        <label>Previous Net Weekly Income</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter_IP__c</fullName>
        <label>Submitter IP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Balance__c</fullName>
        <label>Super Balance</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Too_Many_Credit_Enquiries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Too Many Credit Enquiries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <formula>VALUE(TEXT(HPI_LE_Dependants__c)) + HPI_Living_Expenses__c + Other_Living_Expenses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unbounce_Page_ID__c</fullName>
        <label>Unbounce Page ID</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unbounce_Page_Variant__c</fullName>
        <label>Unbounce Page Variant</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unbounce_Submission_Date__c</fullName>
        <label>Unbounce Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unbounce_Submission_Time__c</fullName>
        <label>Unbounce Submission Time</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfAdequate_Insurance__c</fullName>
        <description>Click Loans</description>
        <label>acfAdequate_Insurance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfAnnual_Salary__c</fullName>
        <description>Click Loans</description>
        <label>Annual Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfAnnual_profit_income__c</fullName>
        <description>Click Loans</description>
        <label>Annual profit / income</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfAny_Debt_to_Consolidate__c</fullName>
        <description>Click Loans</description>
        <label>Any Debt to Consolidate?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApp2_Business_Name_or_ABN_autofill__c</fullName>
        <description>Click Loans</description>
        <label>App2 Business Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApp2_How_Long_have_you_been_employed__c</fullName>
        <description>Click Loans</description>
        <label>App2 How Long have you been employed</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_After_Tax_Salary__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 After Tax Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_Annual_Salary__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 Annual Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_Annual_profit_income__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 Annual profit / income</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_Before_Tax_Salary__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 Before Tax Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_Citizenship_Status__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 Citizenship Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_DOB__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 DOB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_Dependents__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 Dependents</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_Employer_Name__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 Employer Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_Employment_Type__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 Employment Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_How_Long__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 How Long</label>
        <length>144</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_Marital_Status__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 Marital Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_Monthly_Salary__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 Annual Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_Name__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_Residency_status__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 Residency status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_dependent1_Age__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 dependent1 Age</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_dependent2_Age__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 dependent2 Age</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApplicant2_dependent3_Age__c</fullName>
        <description>Click Loans</description>
        <label>Applicant2 dependent3 Age</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfApproximately_how_much_is_your_house__c</fullName>
        <description>Click Loans</description>
        <label>Approx House Worth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfAssetsAndLiablities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AssetsAndLiablities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfBefore_Tax_Salary__c</fullName>
        <description>Click Loans</description>
        <label>Before Tax Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfBusiness_Name_or_ABN_autofill__c</fullName>
        <description>Click Loans</description>
        <label>Business Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfConcerned_about_interest_rates__c</fullName>
        <description>Click Loans</description>
        <label>acfConcerned_about_interest_rates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfCurrent_Loan_Amount__c</fullName>
        <description>Click Loans</description>
        <label>Current Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfCurrent_Rate__c</fullName>
        <description>Click Loans</description>
        <label>Current Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>acfDependant1_Age__c</fullName>
        <description>Click Loans</description>
        <label>Dependant1 Age</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDependant2_Age__c</fullName>
        <description>Click Loans</description>
        <label>Dependant2 Age</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDependant3_Age__c</fullName>
        <description>Click Loans</description>
        <label>Dependant3 Age</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDetails_of_change__c</fullName>
        <description>Click Loans</description>
        <label>acfDetails_of_change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfDo_u_know_your_current_interest_rate__c</fullName>
        <description>Click Loans</description>
        <label>Do you know your current interest rate?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acfEconsent_App2__c</fullName>
        <label>acfEconsent_App2</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfEconsent__c</fullName>
        <description>Click Loans</description>
        <label>acfEconsent</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfForeseable_changes_circumstances__c</fullName>
        <description>Click Loans</description>
        <label>acfForeseable_changes_circumstances</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfHome_Phone__c</fullName>
        <description>Click Loans</description>
        <label>Home Phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acfHow_Much_Cash_Out__c</fullName>
        <description>Click Loans</description>
        <label>How Much (Cash Out)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acfHow_Much__c</fullName>
        <description>Click Loans</description>
        <label>How Much?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfInsurance_Referral__c</fullName>
        <description>Click Loans</description>
        <label>acfInsurance_Referral</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfIsIdentityDocumentRejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Identity Document Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIsLoginAttemptCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>IsLoginAttemptCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfIsMobileVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Click Loans</description>
        <label>Is Mobile Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acfJob_Security__c</fullName>
        <description>Click Loans</description>
        <label>acfJob_Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfKnowaboutus__c</fullName>
        <description>Click Loans</description>
        <label>Know about us</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfLoan_Amount__c</fullName>
        <description>Click Loans</description>
        <label>Outstanding Loan Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfNumber_Of_Applicants__c</fullName>
        <description>Click Loans</description>
        <label>Number Of Applicants</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfPassword__c</fullName>
        <description>Click Loans</description>
        <label>Password</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfPostal_Code__c</fullName>
        <description>Click Loans</description>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfType__c</fullName>
        <description>Click Loans</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfUse__c</fullName>
        <description>Click Loans</description>
        <label>Use</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfWe_ve_already_got_your_mobile__c</fullName>
        <description>Click Loans</description>
        <label>We’ve already got your mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfWhat_Year_Tax_Return_do_you_Have_App2__c</fullName>
        <description>Click Loans</description>
        <label>What Year Tax Return do you Have?</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfWhat_Year_Tax_Return_do_you_Have__c</fullName>
        <description>Click Loans</description>
        <label>What Year Tax Return do you Have</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfWhat_is_your_current_payment_type__c</fullName>
        <description>Click Loans</description>
        <label>What is your current payment type?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfWhat_is_your_postcode__c</fullName>
        <description>Click Loans</description>
        <label>What is the address?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acfWhy_are_you_refinancing__c</fullName>
        <description>Click Loans</description>
        <label>Why are you refinancing?</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To get a better rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash out</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>acf_3yrs_of_address_history__c</fullName>
        <description>Click Loans</description>
        <label>3yrs of address history</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Applicant_Dependants__c</fullName>
        <description>Click Loans</description>
        <label>Dependants</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Applicant_Employment_Type__c</fullName>
        <description>Click Loans</description>
        <label>Employment Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Applicant_Name__c</fullName>
        <description>Click Loans</description>
        <label>Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Approx_Property_Valuation__c</fullName>
        <description>Click Loans</description>
        <label>Approx Property Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acf_Asset_Type__c</fullName>
        <description>Click Loans</description>
        <label>Asset Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acf_Current_Credit_Rating__c</fullName>
        <description>Click Loans</description>
        <label>Current Credit Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>acf_Current_Monthly_Payment__c</fullName>
        <description>Click Loans</description>
        <label>Current Monthly Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>acf_Current_employer_Address__c</fullName>
        <description>Click Loans</description>
        <label>Current employer Address</label>
        <length>250</length>
        <type>Text</type>
    </fields>
</CustomObject>